--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ button {
 }
 
 .container{
-    margin: 0 auto;
+    margin: 30px auto;
     width: 250px;
     background-color: #F7EBEC;
     padding: 5px;
