--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://www.everwallpaper.co.uk/cdn/shop/products/sweet-cat-wallpaper-mural_72574045-a149-4456-ad86-2105c0701eda.jpg?v=1710493831");
+    background-image: url(cat-bg.webp");
     background-size: cover;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: bold;
