--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(cat-bg.webp");
+    background-image: url(cat-bg.png");
     background-size: cover;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: bold;
